kubernetes/catalog/flame/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flame
  namespace: flame
  labels:
    app.kubernetes.io/name: flame
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flame.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: flame
          port: 5005
  tls:
    secretName: int-rlservers-com-tls
